fix: sass import and organisation issues

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,3 +1,6 @@
+@use '@/styles/variables' as *;
+@use 'sass:list';
+
 // Flexbox mixins
 @mixin flex($direction: row, $justify: flex-start, $align: stretch) {
   display: flex;
@@ -61,7 +64,7 @@
 @mixin transition($properties...) {
   $transitions: ();
   @each $property in $properties {
-    $transitions: append($transitions, $property $transition-base, comma);
+    $transitions: list.append($transitions, $property $transition-base, comma);
   }
   transition: $transitions;
 }
