--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $primary-color: #3b82f6;
 $secondary-color: #10b981;
-$background-color: #ffffff;
+$background-color: var(--background);
 $text-color: #1f2937;
 $gray-light: #f3f4f6;
 $gray-medium: #9ca3af;
